Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40556

framedelta value is incorrect when QSG_RENDER_TIMINGS are enabled

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.4.0
    • 5.3.1
    • Quick: SceneGraph
    • None
    • 5a9f0131f8c0b7424a4d323b0f65237206be45ea

      The timer that calculates syncTime (qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:1178) is in the wrong spot. It seems that if the scenegraph isn't updated, the thread sleeps until VSYNC, and this wait is added to the value of the timer. This means that on frames where the scenegraph isn't updated, the value reported is much too high. If I'm not mistaken, and this really is a bug, I'll gladly provide a patch.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            josharenson Joshua Arenson
            josharenson Joshua Arenson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes